--- a/bridge-calamares-3.3.8/PKGBUILD
+++ b/bridge-calamares-3.3.8/PKGBUILD
@@ -6,8 +6,7 @@ pkgver=3.3.8
 pkgrel=1
 pkgdesc='Distribution-independent installer framework'
 arch=($CARCH)
-url="https://github.com/calamares/calamares"
-
+url="https://github.com/calamares/calamares/releases/download"
 license=('BSD-2-Clause'
   'CC-BY-4.0'
   'CC0-1.0'
@@ -34,18 +33,11 @@ backup=('usr/share/calamares/modules/bootloader.conf'
   'usr/share/calamares/modules/initcpio.conf'
   'usr/share/calamares/modules/unpackfs.conf')
 
-source=("$pkgname-$pkgver.tar.gz::$url/archive/v$pkgver.tar.gz"
-  "calamares.desktop"
-  "calamares_polkit"
-  "49-nopasswd-calamares.rules"
-  "paru-support.patch"
-  "flag.patch")
+source=("$pkgname-$pkgver.tar.gz::$url/v$pkgver/calamares-$pkgver.tar.gz"
+  "flag.patch"
+)
 
-sha256sums=('523a0e4cfefbe471d9a6a5d874018fe282a4ce3667ff560bd97190339be6b592'
-  'b9e65ab87f69b2d3f8f8eaea60c78625aef57dd336314ab75389f31a447445be'
-  'c176b28007bd1c1f23d8dbb2c936fa54d0c01bacfb67290ddad597606c129df3'
-  '56d85ff6bf860b9559b8c9f997ad9b1002f3fccc782073760eca505e3bddd176'
-  'f00c90bd87d6dfd73b3ec53fa9a145ac25234676be41604807f05f05a4bf5bbb'
+sha256sums=('09435b04e7e5cee16177223068d8a7402c3c6b8126af13ff527af77742c43363'
   '0830c8fe57c94a63ef87b6a025eb729b4f098a9e46e729b63415f4d3a2755762')
 
 prepare() {
@@ -69,7 +61,6 @@ prepare() {
     sed -i 's/"Install configuration files" OFF/"Install configuration files" ON/' "${srcdir}/${pkgname}-${pkgver}/CMakeLists.txt"
     sed -i "s|\${CALAMARES_VERSION_MAJOR}.\${CALAMARES_VERSION_MINOR}.\${CALAMARES_VERSION_PATCH}|${pkgver}-${pkgrel}|g" CMakeLists.txt
     sed -i "s|CALAMARES_VERSION_RC 1|CALAMARES_VERSION_RC 0|g" CMakeLists.txt
-    git apply --verbose ../paru-support.patch
   }
 
   ##	Non-standard ##
@@ -152,10 +143,10 @@ package_calamares() {
 
   cd "${srcdir}/${pkgname}-${pkgver}/build" || return
   make DESTDIR="$pkgdir" install
-  install -Dm644 "${srcdir}/calamares.desktop" "$pkgdir/etc/xdg/autostart/calamares.desktop"
-  install -Dm755 "${srcdir}/calamares_polkit" "$pkgdir/usr/bin/calamares_polkit"
-  install -Dm644 "${srcdir}/49-nopasswd-calamares.rules" "$pkgdir/etc/polkit-1/rules.d/49-nopasswd-calamares.rules"
-  chmod 750 "$pkgdir"/etc/polkit-1/rules.d
+  # install -Dm644 "${srcdir}/calamares.desktop" "$pkgdir/etc/xdg/autostart/calamares.desktop"
+  # install -Dm755 "${srcdir}/calamares_polkit" "$pkgdir/usr/bin/calamares_polkit"
+  # install -Dm644 "${srcdir}/49-nopasswd-calamares.rules" "$pkgdir/etc/polkit-1/rules.d/49-nopasswd-calamares.rules"
+  # chmod 750 "$pkgdir"/etc/polkit-1/rules.d
 
 }
 
@@ -174,8 +165,8 @@ package_calamares-qt5() {
 
   cd "${srcdir}/${pkgname}-${pkgver}/build" || return
   make DESTDIR="$pkgdir" install
-  install -Dm644 "${srcdir}/calamares.desktop" "$pkgdir/etc/xdg/autostart/calamares.desktop"
-  install -Dm755 "${srcdir}/calamares_polkit" "$pkgdir/usr/bin/calamares_polkit"
-  install -Dm644 "${srcdir}/49-nopasswd-calamares.rules" "$pkgdir/etc/polkit-1/rules.d/49-nopasswd-calamares.rules"
-  chmod 750 "$pkgdir"/etc/polkit-1/rules.d
+  # install -Dm644 "${srcdir}/calamares.desktop" "$pkgdir/etc/xdg/autostart/calamares.desktop"
+  # install -Dm755 "${srcdir}/calamares_polkit" "$pkgdir/usr/bin/calamares_polkit"
+  # install -Dm644 "${srcdir}/49-nopasswd-calamares.rules" "$pkgdir/etc/polkit-1/rules.d/49-nopasswd-calamares.rules"
+  # chmod 750 "$pkgdir"/etc/polkit-1/rules.d
 }
