--- a/bridge-calamares/PKGBUILD
+++ b/bridge-calamares/PKGBUILD
@@ -1,89 +1,122 @@
 # Maintainer: Philip Müller <philm[at]manjaro[dog]org>
+# https://gitlab.manjaro.org/manjaro-arm/packages/extra/calamares/-/blob/master/PKGBUILD
+# https://gitlab.manjaro.org/packages/extra/calamares/-/blob/master/PKGBUILD
+# https://gitlab.manjaro.org/packages/extra/calamares-git/-/blob/master/PKGBUILD
 
 pkgname=calamares
-pkgver=3.3.14
-_pkgver=3.3.14
-pkgrel=1
-# _commit=34e4ce0e1a1a8dc9eee77c37d3c4cae9954a876b
+pkgver=3.3.15.250221
+#_pkgver=3.3.12
+pkgrel=01
+_commit=21ea803
 pkgdesc='Distribution-independent installer framework'
 arch=('i686' 'x86_64')
-license=('BSD-2-Clause AND CC0-1.0 AND CC-BY-4.0 AND GPL-3.0-or-later AND LGPL-2.0-only AND LGPL-2.1-only AND LGPL-3.0-or-later AND MIT')
-url="https://github.com/calamares/calamares/releases/download"
-depends=('kconfig' 'kcoreaddons' 'kiconthemes' 'ki18n' 'solid' 'yaml-cpp' 'kpmcore'
-  'boost-libs' 'ckbcomp' 'hwinfo' 'qt6-svg' 'polkit-qt6'
-  'squashfs-tools' 'libpwquality' 'python')
-makedepends=('extra-cmake-modules' 'qt6-tools' 'qt6-translations' 'git' 'boost')
+license=(GPL)
+url="https://github.com/calamares/calamares/"
+license=('LGPL')
+depends=(
+  'boost-libs'
+  'ckbcomp'
+  'cryptsetup'
+  'doxygen'
+  'efibootmgr'
+  'gptfdisk'
+  'gtk-update-icon-cache'
+  'hwinfo'
+  'icu'
+  'kconfig'
+  'kcoreaddons'
+  'kcrash'
+  'ki18n'
+  'kparts'
+  'kpmcore'
+  'kservice'
+  'kwidgetsaddons'
+  'libpwquality'
+  'mkinitcpio-openswap'
+  'polkit-qt6'
+  'rsync'
+  'qt6-declarative'
+  'solid'
+  'squashfs-tools'
+  'yaml-cpp'
+)
+makedepends=(
+  'boost'
+  'cmake'
+  'extra-cmake-modules'
+  'git'
+  'ninja'
+  'python-jsonschema'
+  'python-pyaml'
+  'python-unidecode'
+  'qt6-tools'
+)
 backup=('usr/share/calamares/modules/bootloader.conf'
   'usr/share/calamares/modules/displaymanager.conf'
   'usr/share/calamares/modules/initcpio.conf'
   'usr/share/calamares/modules/unpackfs.conf')
 
-source+=("$pkgname-$pkgver.tar.gz::$url/v$pkgver/calamares-$pkgver.tar.gz"
-  #"$pkgname-$pkgver-$pkgrel.tar.gz::$url/-/archive/$_commit/$pkgname-$_commit.tar.gz"
-)
-sha256sums=('5547f80db067dea923ae693ba6bb88eb2b2eeac1da3ebec42fce453e31c290c0')
+source=($_pkgname::git+https://github.com/calamares/calamares#commit=$_commit
+  "calamares.desktop"
+  "calamares_polkit"
+  "49-nopasswd-calamares.rules")
+
+sha256sums=('e06f8d5d185120ce3c02ea94137eb51e84a76bb8f5b09be7e9f6e9129c0f81af'
+  'd6a5ce002c99586dfa0cb8621cad631f148dfd0d6d234c31643a63c585c546ee'
+  'c176b28007bd1c1f23d8dbb2c936fa54d0c01bacfb67290ddad597606c129df3'
+  '56d85ff6bf860b9559b8c9f997ad9b1002f3fccc782073760eca505e3bddd176')
 
 prepare() {
-  # mv ${srcdir}/calamares-${_commit} ${srcdir}/calamares-${pkgver}
-  #mv ${srcdir}/calamares-v${pkgver} ${srcdir}/calamares-${pkgver}
-  cd ${srcdir}/calamares-${pkgver}
+  cd ${srcdir}/calamares
+  sed -i -e 's/etc\/sddm.conf/etc\/sddm.conf.d\/kde_settings.conf/' src/modules/displaymanager/main.py
 
   # change version
-  sed -i -e "s|$pkgver|$_pkgver|g" CMakeLists.txt
-  #_ver="$(cat CMakeLists.txt | grep -m3 -e "  VERSION" | grep -o "[[:digit:]]*" | xargs | sed s'/ /./g')"
-  _ver="$pkgver"
-  printf 'Version: %s-%s' "${_ver}" "${pkgrel}"
-  echo ""
-  sed -i -e "s|\${CALAMARES_VERSION_MAJOR}.\${CALAMARES_VERSION_MINOR}.\${CALAMARES_VERSION_PATCH}|${_ver}-${pkgrel}|g" CMakeLists.txt
-  sed -i -e "s|CALAMARES_VERSION_RC 1|CALAMARES_VERSION_RC 0|g" CMakeLists.txt
+  _ver="$(cat CMakeLists.txt | grep -m3 -e "  VERSION" | grep -o "[[:digit:]]*" | xargs | sed s'/ /./g')"
+  sed -i -e "s|CALAMARES_VERSION $_replacethisversion|CALAMARES_VERSION $pkgver|g" CMakeLists.txt
 
-  # change branding
-  # sed -i -e "s/default/manjaro/g" src/branding/CMakeLists.txt
-
-  # Apply patches
-  local src
-  for src in "${source[@]}"; do
-    src="${src%%::*}"
-    src="${src##*/}"
-    [[ $src = *.patch ]] || continue
-    msg2 "Applying patch: $src..."
-    patch -Np1 <"../$src"
-  done
 }
 
 build() {
-  cd ${srcdir}/calamares-${pkgver}
+  cd $_pkgname
 
-  mkdir -p build
-  cd build
-  cmake .. \
-    -DCMAKE_BUILD_TYPE=Debug \
+  cmake -S . -Bbuild \
+    -GNinja \
+    -DCMAKE_BUILD_TYPE=Release \
     -DCMAKE_INSTALL_PREFIX=/usr \
     -DCMAKE_INSTALL_LIBDIR=lib \
+    -DWITH_APPSTREAM=OFF \
+    -DWITH_PYBIND11=OFF \
     -DWITH_QT6=ON \
-    -DINSTALL_CONFIG=ON \
-    -DSKIP_MODULES="initramfs initramfscfg \
-                              dummyprocess dummypython \
-                              dummycpp dummypythonqt \
-                              services-openrc"
-  make
+    -DSKIP_MODULES="dracut \
+          dracutlukscfg \
+          dummycpp \
+          dummyprocess \
+          dummypython \
+          dummypythonqt \
+          initramfs \
+          initramfscfg \
+          interactiveterminal \
+          keyboardq \
+          license \
+          localeq \
+          oemid \
+          packagechooserq \
+          partitionq \
+          services-openrc \
+          summaryq \
+          tracking \
+          usersq \
+          welcomeq \
+          zfs \
+          zfshostid"
+
+  cmake --build build
 }
-
 package() {
-  cd ${srcdir}/calamares-${pkgver}/build
-  make DESTDIR="$pkgdir" install
-  # install -Dm644 "../data/manjaro-icon.svg" "$pkgdir/usr/share/icons/hicolor/scalable/apps/calamares.svg"
-  # install -Dm644 "../data/calamares.desktop" "$pkgdir/usr/share/applications/calamares.desktop"
-  # install -Dm755 "../data/calamares_polkit" "$pkgdir/usr/bin/calamares_polkit"
-  # install -Dm644 "../data/49-nopasswd-calamares.rules" "$pkgdir/etc/polkit-1/rules.d/49-nopasswd-calamares.rules"
-  # chmod 750      "$pkgdir"/etc/polkit-1/rules.d
-
-  # rename services-systemd back to services
-  # mv "$pkgdir/usr/lib/calamares/modules/services-systemd" "$pkgdir/usr/lib/calamares/modules/services"
-  # mv "$pkgdir/usr/share/calamares/modules/services-systemd.conf" "$pkgdir/usr/share/calamares/modules/services.conf"
-  # sed -i -e 's/-systemd//' "$pkgdir/usr/lib/calamares/modules/services/module.desc"
-  # sed -i -e 's/-systemd//' "$pkgdir/usr/share/calamares/settings.conf"
-  #
-  # # fix branding install
-  # cp -av "../src/branding/manjaro" "$pkgdir/usr/share/calamares/branding/"
+  cd ${srcdir}/calamares/build
+  DESTDIR="${pkgdir}" cmake --build . --target install
+  install -Dm644 "${srcdir}/calamares.desktop" "$pkgdir/etc/xdg/autostart/calamares.desktop"
+  install -Dm755 "${srcdir}/calamares_polkit" "$pkgdir/usr/bin/calamares_polkit"
+  install -Dm644 "${srcdir}/49-nopasswd-calamares.rules" "$pkgdir/etc/polkit-1/rules.d/49-nopasswd-calamares.rules"
+  chmod 750 "$pkgdir"/etc/polkit-1/rules.d
 }
